# dynamic_waste_reduction_agent

./: Dockerfile  README.md  TODO.md  dashboard.py  gemini_ai.py  generate_data.py  pyproject.toml  requirements.txt  tools.py
.adk/: session.db
.claude/: settings.local.json
agents/: agent.py  execution_agent.py
api/: routes.py
data/: decisions_log.json  mock_inventory.json
docs/plans/: 2026-03-31-implementation-plan.md  2026-03-31-waste-engine-design.md
infra/: __init__.py  bigquery_schema.py
rag/: retriever.py
rag/documents/: esg_reporting_standards.txt  price_elasticity_data.txt
scripts/: create_bq_tables.py  deploy.sh  seed_bigquery.py  setup.sh  setup_rag.py
src/: agent_engine_deploy.py  app.py  main.py  orchestrator.py  tools.py
src/agents/: __init__.py  data_agent.py  decision_agent.py  decision_optimization_agent.py  demand_forecasting_agent.py  explanation_agent.py  forecast_agent.py  forecasting_agent.py  orchestrator.py  pricing_agent.py  transfer_agent.py  waste_risk_agent.py
src/agents/.adk/: session.db
src/configs/: agents_config.yaml  model_config.yaml
src/data/: decisions_log.json  transfers_log.json
src/rag/: __init__.py  corpus_builder.py
src/rag/documents/: food_safety_regulations.txt  seasonal_demand_patterns.txt  (+2 more)
src/services/: __init__.py  decision_service.py  inventory_service.py
src/tools/: inventory_tools.py  pricing_tools.py  rag_tools.py  weather_tools.py
templates/: index.html
tests/: run_tests.py  test_engine.py  test_gemini_integration.py
tools/: __init__.py  bigquery_tools.py
