[project]
name = "dynamic-waste-reduction-engine"
version = "0.1.0"
description = "AI-Powered Dynamic Waste Reduction Engine — Google AI Hackathon"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "faker>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.ruff]
line-length = 100
